--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mailgen": "^2.0.32",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.11",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
