--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mailgen": "^2.0.32",
-    "mysql2": "^3.15.3",
+    "mysql2": "^3.16.0",
     "nodemailer": "^7.0.11",
     "sequelize": "^6.37.7",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "socket.io": "^4.8.3"
   }
 }
